# jrand

./: Cargo.toml
src/: entropy.rs  lib.rs  math.rs  random.rs
src/entropy/: x86.rs
